<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LiveVideoBroadcasterActivity"
    android:id="@+id/root_layout">

    <!--
    <com.google.android.exoplayer.AspectRatioFrameLayout
        android:id="@+id/cameraPreview_afl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        >
        -->
    <android.opengl.GLSurfaceView
        android:id="@+id/cameraPreview_surfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:visibility="gone"
        android:layout_gravity="center" />
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#77000000"/>
    <!--
   </com.google.android.exoplayer.AspectRatioFrameLayout>
    -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:padding="4dp"
        android:visibility="visible">

        <ImageButton
            android:id="@+id/settings_button"
            style="?borderlessButtonStyle"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="Settings"
            android:onClick="showSetResolutionDialog"
            android:src="@drawable/ic_settings_white_24dp" />

        <ImageButton
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:adjustViewBounds="true"
            android:contentDescription="ChangeCamera"
            android:onClick="changeCamera"
            android:src="@drawable/ic_switch_camera_white_24dp" />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/stream_live_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_live"
            android:padding="5dp"
            android:text="@string/live_indicator"
            android:visibility="gone" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:padding="24dp"
        app:passwordToggleEnabled="true"
        android:visibility="visible">

        <EditText
            android:id="@+id/rtmp_url_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:hint="@string/stream_url"
            android:importantForAutofill="no"
            android:text="@string/stream_url_value"
            android:textAppearance="?android:textAppearanceMedium" />

        <EditText
            android:id="@+id/stream_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:hint="@string/stream_name"
            android:importantForAutofill="no"
            android:text="@string/streamId"
            android:textAppearance="?android:textAppearanceMedium" />

        <Button
            android:id="@+id/toggle_broadcasting"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="toggleBroadcasting"
            android:text="@string/start_broadcasting"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/white" />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>